# SimilaritySearch

./: .gitignore  README.md  pyproject.toml
audio_sim/: requirements.txt
audio_sim/app/: audio_sim_search.py  config.py  main.py  request.py
gif_sim/: requirements.txt
gif_sim/app/: config.py  gif_sim_search.py  main.py  request.py
img_sim/: requirements.txt
img_sim/app/: config.py  img_sim_search.py  main.py  request.py
txt_sim/: requirements.txt  txt_sim_search.py
txt_sim/app/: config.py  main.py  request.py  txt_sim_search.py
