[tool.poetry]
name = "similaritysearch"
version = "0.1.0"
description = "A project for performing similarity search on text data."
authors = ["Ametist3d <ame4642@gmail.com>"]
license = "test"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = ">=1.21.0,<2.0.0"
sentence-transformers = "^3.4.1"
faiss-gpu = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
